# data-structures-and-algorithms

./: .dockerignore  .flake8  .gitignore  LICENSE  README.md  docker-compose.yml  pullrequest.txt  pyproject.toml
.agent/workflows/: rebuild-devcontainer.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/autopr/: pullrequest.txt
.github/workflows/: ci.yml  wf-ci.yml
ci/terraform/: main.tf  variables.tf
data_structures_and_algorithms/: Dockerfile  main.py
data_structures_and_algorithms/config/schema/: config.schema.json
data_structures_and_algorithms/sneks/: __init__.py
docs/: deployment.md
ini/: Initialize-TemplateRepository.ps1
ini/config/: config.meta.json
snek_case/: Dockerfile  main.py
src/data_structures/: __init__.py
src/data_structures/bloom_filter/: bloom_filter.py
src/data_structures/core/: __init__.py  data_structure.py  linear_structure.py  mapped_structure.py  node.py
src/data_structures/hash_table/: hash_object.py  hash_table.py
src/data_structures/heap/: heap.py
src/data_structures/linked_list/: __init__.py  doubly_linked_list.py  doubly_linked_list_node.py  linked_list.py  linked_list_mixin.py  linked_list_node.py
src/data_structures/lru_cache/: lru_cache.py
src/data_structures/queue/: queue.py
src/data_structures/stack/: stack.py
tests/: conftest.py  test_version.py
tests/config/: config.tests.json
tests/config/schema/: config.tests.schema.json
tests/core/: test_configuration_provider.py  test_json_configuration_provider.py
tests/data/: csv.csv
tests/data_structures/bloom_filter/: test_bloom_filter.py
tests/data_structures/heap/: test_heap.py
tests/sneks/: test_cool_snek.py  test_normal_snek.py  test_snek.py
(+6 files in other folders)
