[tool.poetry]
name = "data-structures-and-algorithms"
version = "0.1.0"
description = ""
authors = ["armckinney"]
packages = [
    { include ="algorithms", from = "src" }, 
    { include ="data_structures", from = "src" }
]

[tool.poetry.dependencies]
python = "3.9.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.0.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
