[project]
name = "data-structures-and-algorithms"
version = "0.1.0"
description = ""
authors = [{ name = "armckinney" }]
requires-python = "==3.12.3"
dependencies = [
    "ruff>=0.14.8",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2",
    "pytest>=8.0.0,<9",
    "ruff>=0.14.8",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/algorithms",
    "src/data_structures",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/algorithms",
    "src/data_structures",
]

[tool.hatch.build.targets.wheel.sources]
"src/algorithms" = "algorithms"
"src/data_structures" = "data_structures"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
